[Modfied] OC-202 #comment upload icon for connector #time 3h

--- a/src/frontend/locales/en/connectors.json
+++ b/src/frontend/locales/en/connectors.json
@@ -12,6 +12,8 @@
       "INVOKER_PLACEHOLDER": "Choose invoker...",
       "INVOKER_DESCRIPTION": "Description",
       "INVOKER_DESCRIPTION_DEFAULT": "Here you will see the description of the connector",
+      "ICON": "Icon",
+      "ICON_PLACEHOLDER": "Please select an icon...",
       "PAGE_1": "General Data",
       "URL": "URL",
       "APIKEY": "API-Key",
@@ -42,6 +44,8 @@
       "INVOKER_PLACEHOLDER": "Choose invoker...",
       "INVOKER_DESCRIPTION": "Description",
       "INVOKER_DESCRIPTION_DEFAULT": "Here you will see the description of the connector",
+      "ICON": "Icon",
+      "ICON_PLACEHOLDER": "Please select an icon...",
       "PAGE_1": "General Data",
       "URL": "URL",
       "APIKEY": "API-Key",
