--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -36,6 +36,7 @@
     "DELETE_SCHEDULES": "The selected schedules were successfully removed",
     "FETCH_TEMPLATES": "Templates were successfully fetched",
     "ADD_TEMPLATE": "Template was successfully added",
+    "IMPORT_TEMPLATE": "Template was successfully imported",
     "DELETE_TEMPLATE": "The template was successfully removed",
     "ADD_WEBHOOK": "The webhook was successfully created",
     "DELETE_WEBHOOK": "The webhook was successfully removed",
@@ -120,6 +121,7 @@
     "DELETE_SCHEDULES": "The selected schedules were not removed",
     "FETCH_TEMPLATES": "Templates were not fetched",
     "ADD_TEMPLATE": "Template was not added",
+    "IMPORT_TEMPLATE": "Template was not imported",
     "DELETE_TEMPLATE": "The template was not removed",
     "ADD_WEBHOOK": {
       "__DEFAULT__": "The webhook was not created",
