--- a/src/frontend/locales/en/apps.json
+++ b/src/frontend/locales/en/apps.json
@@ -3,6 +3,8 @@
     "ADD_BUTTON": "Add App",
     "EMPTY_LIST": "The list of Apps is empty",
     "HEADER": "Apps",
-    "HEADER_ADMIN_CARDS": "Admin Cards"
+    "HEADER_ADMIN_CARDS": "Admin Cards",
+    "APP_DOWN": "Disabled",
+    "APP_UP": "Enabled"
   }
 }
