--- a/src/frontend/locales/en/auth.json
+++ b/src/frontend/locales/en/auth.json
@@ -1,7 +1,9 @@
 {
   "LOGIN": {
     "HEADER": "Log In",
-    "BUTTON_CONNECT": "Connect"
+    "BUTTON_CONNECT": "Connect",
+    "EMAIL_PLACEHOLDER": "Email",
+    "PASSWORD_PLACEHOLDER": "Password"
   },
   "LOGOUT": {
     "HEADER": "Log Out",
