[Added] OC-160 #comment cleaning and refactoring layout #time 4h

--- a/src/frontend/locales/en/admin_cards.json
+++ b/src/frontend/locales/en/admin_cards.json
@@ -1,4 +1,7 @@
 {
+  "MENU": {
+    "TITLE": "Admin"
+  },
   "LIST":{
     "ADD_BUTTON": "Add Admin Card",
     "EMPTY_LIST": "The list of Admin Cards is empty",
