--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -66,7 +66,7 @@
     "UPDATE_USERGROUP": "There is an error updating user group.",
     "DELETE_USERGROUP": "There is an error deleting user group.",
     "TEST_CONNECTOR": {
-      "CONNECTION_FAILED": "Connection was failed",
+      "COMMUNICATION_FAILED": "Connection was failed",
       "__DEFAULT__": "Unsuccessfully tested"
     },
     "ADD_CONNECTOR": {
