--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -185,7 +185,7 @@
     "OTRS": "OTRS",
     "SENSU": "Sensu"
   },
-  "DETAILS": "In details",
+  "DETAILS": "in details",
   "DIALOG_DETAILS": {
     "TITLE": "Error Message",
     "CLOSE": "Close"
