OC-243 #comment notifications button in schedules #time 40h

--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -178,7 +178,7 @@
     "SUCCESS": "Success",
     "ERROR": "Error",
     "WARNING": "Warning",
-    "NOTE": "Message"
+    "NOTE": ""
   },
   "SYSTEMS": {
     "OC": "OC",
