[Mergin]OC-244 #comment merging with backend and mapping #time 4h

--- a/src/frontend/locales/en/notification_templates.json
+++ b/src/frontend/locales/en/notification_templates.json
@@ -44,5 +44,14 @@
     "LIST_BUTTON": "Notification Templates",
     "ADD_BUTTON": "Update",
     "HEADER": "Update Template"
+  },
+  "VIEW":{
+    "FORM":{
+      "NAME": "Name",
+      "TYPE": "Type",
+      "PAGE_1": "General Data"
+    },
+    "LIST_BUTTON": "Notification Templates",
+    "HEADER": "View Template"
   }
 }
