--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -42,7 +42,11 @@
     "DELETE_WEBHOOK": "The webhook was successfully removed",
     "COPYTOCLIPBOARD_WEBHOOK": "The webhook was successfully copied",
     "ADD_INVOKER": "The invoker was successfully added",
-    "DELETE_INVOKER": "The invoker was successfully deleted"
+    "DELETE_INVOKER": "The invoker was successfully deleted",
+    "ADD_NOTIFICATIONTEMPLATE": "The template was successfully added",
+    "FETCH_NOTIFICATIONTEMPLATES": "Templates were successfully fetched",
+    "UPDATE_NOTIFICATIONTEMPLATE": "The template was successfully updated",
+    "DELETE_NOTIFICATIONTEMPLATE": "The template was successfully removed"
   },
   "ERROR": {
     "ADD_USER": {
@@ -149,7 +153,11 @@
     "LOAD_ADMINCARD": "The link to this card does not work, please check your permissions",
     "ADD_INVOKER": "The invoker was not added",
     "DELETE_INVOKER": "The invoker was not deleted",
-    "CHECK_OCCONNECTION": "Your session is expired"
+    "CHECK_OCCONNECTION": "Your session is expired",
+    "ADD_NOTIFICATIONTEMPLATE": "The template was not added",
+    "FETCH_NOTIFICATIONTEMPLATES": "Templates were not fetched",
+    "UPDATE_NOTIFICATIONTEMPLATE": "The template was not updated",
+    "DELETE_NOTIFICATIONTEMPLATE": "The template was not removed"
   },
   "WARNING": {
     "ADD_USER": "The user was added, but ...",
