[Merging]OC-244 #comment minor changes #time 2h

--- a/src/frontend/locales/en/notification_templates.json
+++ b/src/frontend/locales/en/notification_templates.json
@@ -42,7 +42,7 @@
       "AT_LEAST_ONE_CONTENT_ITEM": "Template should be at least in one language"
     },
     "LIST_BUTTON": "Notification Templates",
-    "ADD_BUTTON": "Update",
+    "UPDATE_BUTTON": "Update",
     "HEADER": "Update Template"
   },
   "VIEW":{
