--- a/src/frontend/locales/en/schedules.json
+++ b/src/frontend/locales/en/schedules.json
@@ -4,6 +4,7 @@
   },
   "HEADER": "Scheduler",
   "NOTIFICATION": {
+    "EMPTY": "No templates",
     "NAME": "Name",
     "EVENT_TYPE": "Event Type",
     "NOTIFICATION_TYPE": "Notification Type",
