--- a/src/frontend/locales/en/schedules.json
+++ b/src/frontend/locales/en/schedules.json
@@ -4,7 +4,7 @@
   },
   "HEADER": "Scheduler",
   "NOTIFICATION": {
-    "EMPTY": "No templates",
+    "EMPTY": "No entry",
     "NAME": "Name",
     "EVENT_TYPE": "Event Type",
     "NOTIFICATION_TYPE": "Notification Type",
@@ -12,6 +12,7 @@
     "ACTION": "Action",
     "EVENT_PRE": "Pre",
     "EVENT_POST": "Post",
+    "EVENT_ALERT": "Alert",
     "UPDATE": "Update",
     "DELETE": "Delete",
     "TYPE": {
