[Refactoring] OC-264 #comment translation injections in XmlEditor components #time 20h

--- a/src/frontend/locales/en/basic_components.json
+++ b/src/frontend/locales/en/basic_components.json
@@ -5,5 +5,51 @@
       "TOOLTIP_USE_PARAM": "User Param",
       "TOOLTIP_SEARCH_PARAM": "Search Param"
     }
+  },
+  "XML_EDITOR": {
+    "ADD_DECLARATION": "Add Declaration",
+    "ADD_ITEM": "Add Item",
+    "ADD_PROPERTY": "Add Property",
+    "DELETE_TAG": "Delete Tag",
+    "DELETE_ICON": "Delete",
+    "DELETE_ATTRIBUTE": "Delete Attribute",
+    "MAXIMIZE": "Maximize",
+    "MINIMIZE": "Minimize",
+    "COPY_TO_CLIPBOARD": "Copy to Clipboard",
+    "CLOSE": "Close",
+    "LIST_OF_REFERENCES": "List of References",
+    "MORE": "more",
+    "OUT_OF_LIMIT_REFERENCES": "more than {{number}} references",
+    "PROPERTY": {
+      "NAME": "Name",
+      "ADD": "Add",
+      "UPDATE": "Update",
+      "VALIDATIONS": {
+        "UNIQUE_NAME": "Property name should be unique",
+        "REQUIRED_NAME": "Name is a required field",
+        "NAME_NOT_NUMBER": "Name cannot be a number"
+      }
+    },
+    "TAG": {
+      "ADD": "Add",
+      "UPDATE": "Update",
+      "NAME": "Name",
+      "TEXT": "Text",
+      "TYPE": {
+        "TAG_TYPE_LABEL": "Tag Type",
+        "VALUE_TYPE": "Value Type",
+        "EMPTY": "Empty",
+        "TEXT": "Text",
+        "REFERENCE": "Reference",
+        "REFERENCE_VALUE": "Value",
+        "ITEM": "Item",
+        "FROM_CLIPBOARD": "From Clipboard"
+      },
+      "VALIDATIONS": {
+        "WRONG_FORMAT": "Please, check the xml format",
+        "REQUIRED_NAME": "Name is a required field",
+        "NAME_NOT_NUMBER": "Name cannot be a number"
+      }
+    }
   }
 }
