[Updated] OC-280 #comment Schedule Voice Control #time 16h

--- a/src/frontend/locales/en/schedules.json
+++ b/src/frontend/locales/en/schedules.json
@@ -92,7 +92,7 @@
   },
   "ADD":{
     "TITLE_PLACEHOLDER": "Title",
-    "FILTER_PLACEHOLDER": "Filter by title",
+    "SEARCH_PLACEHOLDER": "Search by title",
     "CONNECTION_PLACEHOLDER": "Connection",
     "CRONEXP_PLACEHOLDER": "Cron Expression",
     "ADD_BUTTON_TITLE": "Add Job",
