--- a/src/frontend/locales/de/admin_cards.json
+++ b/src/frontend/locales/de/admin_cards.json
@@ -1,7 +1,7 @@
 {
   "LIST":{
     "ADD_BUTTON": "Add Admin Card",
-    "EMPTY_LIST": "The list of Admin Cards is empty",
-    "HEADER": "Admin Cards"
+    "EMPTY_LIST": "The list of Admin Panel is empty",
+    "HEADER": "Admin Panel"
   }
 }
