[Modified] OC-286 #comment implemented Available Updates in admin panel #time 5h

--- a/src/frontend/locales/en/admin_cards.json
+++ b/src/frontend/locales/en/admin_cards.json
@@ -5,6 +5,8 @@
   "LIST":{
     "ADD_BUTTON": "Add Admin Card",
     "EMPTY_LIST": "The list of Admin Cards is empty",
-    "HEADER": "Admin Cards"
+    "HEADER": "Admin Cards",
+    "NO_UPDATES": "No updates available",
+    "UPDATES": "New version is available"
   }
 }
