--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -51,7 +51,7 @@
     "FETCH_NOTIFICATIONTEMPLATES": "Templates were successfully fetched",
     "UPDATE_NOTIFICATIONTEMPLATE": "The template was successfully updated",
     "DELETE_NOTIFICATIONTEMPLATE": "The template was successfully removed",
-    "FETCH_APPVERSION": "OC Update <0>{{version}}</0> available"
+    "FETCH_UPDATEAPPVERSION": "OC Update <0>{{version}}</0> available"
   },
   "ERROR": {
     "ADD_USER": {
