[Modified] OC-295 #comment implemented redux functionalities for AvailableUpdates #time 4h

--- a/src/frontend/locales/en/update_assistant.json
+++ b/src/frontend/locales/en/update_assistant.json
@@ -7,6 +7,7 @@
     "SYSTEM_CHECK": "System Overview",
     "PAGE_2": "Available Updates",
     "HINT_2": "Select desirable update",
+    "AVAILABLE_UPDATES": "Available Updates",
     "PAGE_3": "File-Update",
     "HINT_3": "Please, update your templates",
     "PAGE_4": "Migration",
