--- a/src/frontend/locales/en/update_assistant.json
+++ b/src/frontend/locales/en/update_assistant.json
@@ -8,6 +8,20 @@
     "PAGE_2": "Available Updates",
     "HINT_2": "Select desirable update",
     "AVAILABLE_UPDATES": "Available Updates",
+    "CHANGELOG": "Changelog",
+    "OLD_VERSION": "old",
+    "MORE_OLD_VERSIONS": "More Old Versions",
+    "CURRENT_VERSION": "current",
+    "MORE_NEW_VERSIONS": "More New Versions",
+    "VERSION_HEADER": "Version",
+    "DELETE_TOOLTIP": "Delete",
+    "CHANGELOG_HEADER": "Changelog",
+    "SELECT_HEADER": "Select",
+    "UPLOAD_UPDATE": "Upload Update",
+    "ONLINE": "Online",
+    "OFFLINE": "Offline",
+    "DELETE_CONFIRMATION_TITLE": "Confirmation",
+    "DELETE_CONFIRMATION_MESSAGE": "Do you really want to remove?",
     "PAGE_3": "File-Update",
     "HINT_3": "Please, update your templates",
     "PAGE_4": "Migration",
