[Modified] OC-304 #comment added translations and set the right format for update invokers #time 3h

--- a/src/frontend/locales/en/update_assistant.json
+++ b/src/frontend/locales/en/update_assistant.json
@@ -2,6 +2,7 @@
   "FORM":{
     "HEADER": "Update Assistant",
     "UPDATE_BUTTON": "Update",
+    "CANCEL_TOOLTIP": "Cancel",
     "PAGE_1": "System Check",
     "HINT_1": "Please check your system properties",
     "SYSTEM_CHECK": "System Overview",
