--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -55,7 +55,9 @@
     "FETCH_UPDATEAPPVERSION": "OC Update <0>{{version}}</0> available",
     "UPLOAD_VERSION": "New version was successfully uploaded",
     "UPDATE_TEMPLATESFORASSISTANT": "Templates were successfully updated",
-    "UPDATE_INVOKERSFORASSISTANT": "Invokers were successfully updated"
+    "UPDATE_INVOKERSFORASSISTANT": "Invokers were successfully updated",
+    "UPDATE_CONNECTIONSFORASSISTANT": "Connections were successfully updated",
+    "UPDATE_SYSTEM": "Opencelium was successfully updated"
   },
   "ERROR": {
     "ADD_USER": {
@@ -185,6 +187,8 @@
     "DELETE_VERSION": "Version was not removed",
     "UPDATE_TEMPLATESFORASSISTANT": "Templates were not updated",
     "UPDATE_INVOKERSFORASSISTANT": "Invokers were not updated",
+    "UPDATE_CONNECTIONSFORASSISTANT": "Connections were not updated",
+    "UPDATE_SYSTEM": "Opencelium was not updated",
     "FETCH_ONLINEUPDATES": {
       "__DEFAULT__": "The Online Updates were not fetched"
     },
